--- a/eventos.html
+++ b/eventos.html
@@ -39,7 +39,7 @@
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="#">Eventos</a>
+                <a class="nav-link" href="eventos.html">Eventos</a>
               </li>
 
               <li class="nav-item">
